Publicacion en facebook ok , trabajando en la de twitter e interfaz de post

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,3 +52,12 @@ fieldset[disabled] .btn-sample.active {
     color: #611BBD;
     background-color: #ffffff;
 }
+.naranja{
+    color:orange;
+}
+.verde{
+    color: #2ab045;
+}
+.rojo{
+    color: #ff6c60;
+}
